[package]
name = "cucumber_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cucumber = "0.19"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-timer = "0.2.13"
open = "3.2.0"
webpage = "1.5.0"

[[test]]
name = "example" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest






